--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version> <!-- Assurez-vous de vérifier la dernière version sur Maven Central -->
+        </dependency>
     </dependencies>
 
 </project>
